--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -25,7 +25,7 @@
         font-family: Mulish;
         font-size: 14px;
         line-height: 1.313rem;
-        width: 304px;
+        max-width: 304px;
         padding: 0;
     }
 
