--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -52,6 +52,49 @@
         width: 90%;
         /* padding: 0; */
     }
+
+    #tours {
+        flex-direction: column;
+        margin-left: 10px;
+        /* align-items: center; */
+        /* justify-content: center; */
+        /* text-align: center; */
+    }
+
+    .tour-title {
+        color: #131318;
+        font-size: 1.25rem;
+        font-weight: 800;
+        
+    }
+
+    .tour-description {
+        color: rgba(19, 19, 24, 0.70);
+        font-size: 0.875rem;
+        line-height: 24px;
+    }
+
+    .tour_term {
+        color: rgba(19, 19, 24, 0.70);
+        font-size: 0.875rem;
+        line-height: 24px;
+        /* max-width: 335px; */
+    }
+
+    .tourImage {
+        max-width: 335px;
+        margin-top: 24px;
+        margin-right: 30px;
+    }
+}
+
+.tour-foot-description {
+    color: #5A5A5D;
+    font-size: 0.875rem;
+    line-height: 24px;
+    margin-bottom: 25px;
+    max-width: 335px;
+    /* text-align: center; */
 }
 
 /* Responsive for Desktop */
