--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -56,16 +56,13 @@
     #tours {
         flex-direction: column;
         margin-left: 10px;
-        /* align-items: center; */
-        /* justify-content: center; */
-        /* text-align: center; */
     }
 
     .tour-title {
         color: #131318;
         font-size: 1.25rem;
         font-weight: 800;
-        
+
     }
 
     .tour-description {
@@ -78,7 +75,6 @@
         color: rgba(19, 19, 24, 0.70);
         font-size: 0.875rem;
         line-height: 24px;
-        /* max-width: 335px; */
     }
 
     .tourImage {
@@ -86,18 +82,36 @@
         margin-top: 24px;
         margin-right: 30px;
     }
-}
 
-.tour-foot-description {
-    color: #5A5A5D;
-    font-size: 0.875rem;
-    line-height: 24px;
-    margin-bottom: 25px;
-    max-width: 335px;
-    /* text-align: center; */
-}
+    /* Destination Break points */
+    .destination-title {
+        font-size: 1.25rem;
+        font-weight: 800;
+    }
 
-/* Responsive for Desktop */
+    .destination-description {
+        font-size: 0.875rem;
+        line-height: 24px;
+        max-width: 300px;
+    }
+    .tour-foot-description {
+        color: #5A5A5D;
+        font-size: 0.875rem;
+        line-height: 24px;
+        margin-bottom: 25px;
+        max-width: 335px;
+    }
+    .destination-place-album1,
+    .destination-place-album2,
+    .destination-place-album3 {
+        flex-direction: column;
+        align-items: center;
+    }
+    .image{
+        width: 335px;
+        height: 176px;
+     }
+}
 @media screen and (min-width:992px) {
     .banner {
         max-width: 968px;
