--- a/styles/style.css
+++ b/styles/style.css
@@ -173,3 +173,26 @@ select {
     gap: 24px;
     margin-bottom: 24px;
 }
+
+/* Choose us section styles here */
+.why-chose-us {
+    font-family: var(--primary-font);
+    margin-top: 100px;
+}
+
+.choose-title {
+    color: #131318;
+    text-align: center;
+    font-size: 2.5rem;
+    font-weight: 800;
+}
+
+.choose-description {
+    color: rgba(19, 19, 24, 0.70);
+    text-align: center;
+    line-height: 26px;
+    max-width: 643px;
+    margin : 0 auto;
+    margin-top: 24px;
+    margin-bottom: 48px;
+}
