--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -196,6 +196,11 @@
         margin-top: 24px;
         /* margin-bottom: 31px; */
     }
+    /* Add Text over the image */
+    .centered{
+        font-size: 1.25rem;
+        font-weight: 700;
+    }
 }
 
 @media screen and (min-width:992px) {
