One Uniq section adde called tour blog

--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -199,6 +199,12 @@
         font-size: 1.25rem;
         font-weight: 700;
     }
+    .tourGuideContainer{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 25px;
+    }
 }
 
 @media screen and (min-width:992px) {
