--- a/styles/style.css
+++ b/styles/style.css
@@ -439,3 +439,26 @@ footer {
     font-weight: 800;
     /* background: linear-gradient(0deg, rgba(19, 19, 24, 0.20) 0%, rgba(19, 19, 24, 0.20) 100%), url(<path-to-image>), lightgray 50% / cover no-repeat; */
 }
+
+/* Tour Guides Section Styles here */
+.tour-guides {
+    font-family: var(--primary-font);
+}
+
+.tourGuideContainer {
+    display: flex;
+    justify-content: space-around;
+}
+
+.tour_guide {
+    box-shadow:
+        3.7px 3.4px 2.7px rgba(0, 0, 0, 0.022),
+        9.5px 8.7px 6.9px rgba(0, 0, 0, 0.031),
+        19.3px 17.7px 14.2px rgba(0, 0, 0, 0.039),
+        39.8px 36.5px 29.2px rgba(0, 0, 0, 0.048),
+        109px 100px 80px rgba(0, 0, 0, 0.07);
+        max-width: 500px;
+        border: 5px solid red;
+        border-radius: 16px;
+        
+}
