--- a/styles/style.css
+++ b/styles/style.css
@@ -448,6 +448,8 @@ footer {
 .tourGuideContainer {
     display: flex;
     justify-content: space-around;
+    gap: 20px;
+    padding: 40px;
 }
 
 .tour_guide {
